agregada paginacion para films